--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -575,12 +575,6 @@ p a:hover {
   padding: 3rem 0 4rem;
 }
 
-.footer-title,
-.footer-link,
-.footer-social-link {
-  color: var(--bg-color);
-}
-
 .footer-title {
   color: var(--bg-color);
   text-align: center;
@@ -597,7 +591,7 @@ p a:hover {
 .footer-social {
   display: flex;
   justify-content: center;
-  column-gap: 1.25rem;
+  column-gap: 1rem;
 }
 
 .footer-social-link {
